# rust-faf-mcp

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  project.faf
.github/workflows/: ci.yml  homebrew.yml  release.yml
src/: main.rs  tools.rs
tests/: WJTTC-TEST-SUITE.md  mcp_protocol.rs  tier1_security.rs  tier3_edge_cases.rs  tools_functional.rs
